Implement call api for getting rovers

--- a/project/src/public/index.html
+++ b/project/src/public/index.html
@@ -9,12 +9,10 @@
 </head>
 
 <body>
-    <main>
-        <div id="root">
-            <h1>Loading...</h1>
-        </div>
-    </main>
+    <button onclick="changeColor()">curiosity</button></br>
+    <button onclick="changeColor()">opportunity</button></br>
+    <button onclick="changeColor()">spirit</button></br>
 </body>
-<script src="/client.js"></script>
+<!-- <script src="/client.js"></script> -->
 
 </html>
